--- a/notebooks/bastra_grid_analysis.ipynb
+++ b/notebooks/bastra_grid_analysis.ipynb
@@ -11,26 +11,18 @@
     }
    },
    "source": [
-    "# BASTRA NOTEBOOK\n",
-    "En este *notebook* vamos a trabajar con los datos generados por las simulaciones de BASTRA.\n",
-    "Los datos se agruparán por escenarios.\n",
+    "# BASTRA GRID ANALYSIS\n",
+    "This notebook will cover the GRID scenario data analysis based on BASTRA simulator.\n",
     "\n",
-    "Author: Alvaro Paricio. sept.2016"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "nbpresent": {
-     "id": "cc5f0cc1-0a51-4018-a01a-b9672f6f94a8"
-    },
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Preliminares\n",
-    "Antes de ejecutar los escenarios es preciso hacer las correspondienes importaciones de módulos de python para cálculo científico."
+    "Author: Alvaro Paricio. sept.2016\n",
+    "\n",
+    "## Scenarios\n",
+    "* Reference scenario: Grid_NoBastra\n",
+    "    * A GRID map routing traffic without BASTRA map distribution mechanisms.\n",
+    "## References\n",
+    "* For Wilcoxon tests:\n",
+    "    * http://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.stats.wilcoxon.html\n",
+    "    * https://gist.github.com/mblondel/1761714"
    ]
   },
   {
@@ -67,6 +59,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.mlab as mlab\n",
     "import matplotlib.lines as mlines\n",
+    "from scipy.stats import ttest_1samp, wilcoxon, ttest_ind, mannwhitneyu\n",
     "\n",
     "import sklearn as sk\n",
     "import pandas as pd"
