route length calculus, added to the stats report

--- a/notebooks/statistics_route_length_calculation.ipynb
+++ b/notebooks/statistics_route_length_calculation.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -47,6 +47,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.mlab as mlab\n",
     "import matplotlib.lines as mlines\n",
+    "import os\n",
     "\n",
     "import sklearn as sk\n",
     "import pandas as pd"
@@ -63,19 +64,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Function fun_xxxx**"
+    "**Function net_load**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def fun_xxxx():\n",
-    "    print(\"Done.\")"
+    "def net_load(path, scene_net_file):\n",
+    "    fname = path+\"/\"+scene_net_file\n",
+    "    if( not os.path.isfile(fname) ):\n",
+    "        return False\n",
+    "    print(\"Net file uploaded OK\")"
    ]
   },
   {
@@ -83,6 +87,26 @@
    "metadata": {},
    "source": [
     "# Upload network data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Net file uploaded OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "theNet = net_load( \"/Users/alvaro/Desktop/workspace/mutraff/uah-gist-mutraff-bastra\",\n",
+    "            \"scenes/Grid/grid.net.xml\" )"
    ]
   },
   {
