--- a/notebooks/google_maps_traffic_heatmap/mutraff_get_edge_from_incident_place.ipynb
+++ b/notebooks/google_maps_traffic_heatmap/mutraff_get_edge_from_incident_place.ipynb
@@ -32,8 +32,9 @@
     "import googlemaps\n",
     "import gmaps\n",
     "import math\n",
+    "import yaml\n",
     "\n",
-    "API_KEY = 'AIzaSyA6DGaAIAhxXOaxrj6rP99vHoXg3xOORAk'\n",
+    "# TODO - IMPORT CONFIG YAML\n",
     "gm = googlemaps.Client(key=API_KEY)\n",
     "gmaps.configure(api_key=API_KEY) # Your Google API key"
    ]
