--- a/notebooks/google_maps_traffic_heatmap/tests/google_map_test.ipynb
+++ b/notebooks/google_maps_traffic_heatmap/tests/google_map_test.ipynb
@@ -25,8 +25,9 @@
     "import numpy as np\n",
     "import googlemaps\n",
     "import gmaps\n",
+    "import yaml\n",
     "\n",
-    "API_KEY = 'AIzaSyA6DGaAIAhxXOaxrj6rP99vHoXg3xOORAk'\n",
+    "# Import API_KEY from YAML\n",
     "gm = googlemaps.Client(key=API_KEY)\n",
     "gmaps.configure(api_key=API_KEY) # Your Google API key"
    ]
