--- a/notebooks/google_maps_traffic_heatmap/mutraff_draw_congestion.ipynb
+++ b/notebooks/google_maps_traffic_heatmap/mutraff_draw_congestion.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,13 +331,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "experiment=exp[2430]\n",
     "experiment=exp[2500]\n",
     "experiment=exp[2601]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp[1170]=\"alcalahenares_XL_nomutraff_tele60_nomaps_fulltraffic_170206_085516\"\n",
+    "label[1170]=\"alcalahenares(XL)  No TWM -  -  \""
    ]
   },
   {
@@ -349,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,11 +369,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment=exp[3000]"
+    "exp[1183]=\"alcalahenares_3L3h_TopEdges_timeALL_fulltraffic_01_190929_231834\"\n",
+    "label[1183]=\"xxx\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment=exp[1183]"
    ]
   },
   {
@@ -375,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +541,7 @@
        "4  40.485168 -3.396721   40.484897    -3.396515   NaN  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 68,
    "metadata": {
     "scrolled": false
    },
@@ -590,12 +610,12 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>3.597122</td>\n",
+       "      <td>4.122030</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>13.9</td>\n",
+       "      <td>27.78</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -609,12 +629,12 @@
        "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>3.597122</td>\n",
+       "      <td>5.040677</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>13.9</td>\n",
+       "      <td>27.78</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -628,12 +648,12 @@
        "      <th>2</th>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>3.597122</td>\n",
+       "      <td>5.411807</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>13.9</td>\n",
+       "      <td>27.78</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -647,12 +667,12 @@
        "      <th>3</th>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>3.597122</td>\n",
+       "      <td>25.655868</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>13.9</td>\n",
+       "      <td>13.89</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -666,12 +686,12 @@
        "      <th>4</th>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
-       "      <td>3.597122</td>\n",
+       "      <td>4.825054</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>13.9</td>\n",
+       "      <td>13.89</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -687,18 +707,18 @@
       ],
       "text/plain": [
        "   time  edge_id  traf_travel_time  traf_waiting_time  traf_total_veh_num  \\\n",
-       "0     0        0          3.597122                0.0                 0.0   \n",
-       "1     0        1          3.597122                0.0                 0.0   \n",
-       "2     0        2          3.597122                0.0                 0.0   \n",
-       "3     0        3          3.597122                0.0                 0.0   \n",
-       "4     0        4          3.597122                0.0                 0.0   \n",
+       "0     0        0          4.122030                0.0                 0.0   \n",
+       "1     0        1          5.040677                0.0                 0.0   \n",
+       "2     0        2          5.411807                0.0                 0.0   \n",
+       "3     0        3         25.655868                0.0                 0.0   \n",
+       "4     0        4          4.825054                0.0                 0.0   \n",
        "\n",
        "   traf_halted_veh_num  traf_av_occupancy  traf_av_speed  emission_co2  \\\n",
-       "0                  0.0                0.0           13.9           0.0   \n",
-       "1                  0.0                0.0           13.9           0.0   \n",
-       "2                  0.0                0.0           13.9           0.0   \n",
-       "3                  0.0                0.0           13.9           0.0   \n",
-       "4                  0.0                0.0           13.9           0.0   \n",
+       "0                  0.0                0.0          27.78           0.0   \n",
+       "1                  0.0                0.0          27.78           0.0   \n",
+       "2                  0.0                0.0          27.78           0.0   \n",
+       "3                  0.0                0.0          13.89           0.0   \n",
+       "4                  0.0                0.0          13.89           0.0   \n",
        "\n",
        "   emission_co  emission_hc  emission_noise  emission_nox  emission_PMx  \\\n",
        "0          0.0          0.0             0.0           0.0           0.0   \n",
@@ -715,7 +735,7 @@
        "4            0.0          0.0  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 72,
    "metadata": {
     "scrolled": false
    },
@@ -814,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 73,
    "metadata": {
     "scrolled": true
    },
@@ -886,7 +906,7 @@
        "Name: time, Length: 782900, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -923,13 +943,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "632d75c62c5140bcbcda1978b85ac20a",
+       "model_id": "9bba3e8b259e40c591e835669c4310eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -950,6 +970,13 @@
     "# call the function to draw the heatmap\n",
     "drawHeatMap('Alcala de Henares', v_lat_long, v_weight, zoom, max_intensity, radius)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
