MSA Python algorithms and notebooks

--- a/TRAFFIC_ASSIGNMENT/notebooks/MASLAB_translate.ipynb
+++ b/TRAFFIC_ASSIGNMENT/notebooks/MASLAB_translate.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MSA Scenario translator"
+    "# MSA Scenario translator\n",
+    "Scenario generator por MSA evaluation based on: https://github.com/maslab-ufrgs(anaconda3-4.1.0)\n",
+    "### It has been  avaluated but edges seem to be considered as bidirectional so invalid solutions are generated."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -76,43 +76,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "PATH=\"data\"\n",
+    "PATH=\"data/OD_GRID64\"\n",
     "SCENARIO=\"GRID64_6F\"\n",
     "\n",
-    "SCENARIO=\"Madrid_Retiro\"\n",
-    "SCENARIO=\"Madrid_Tablas\"\n",
-    "SCENARIO=\"Madrid_Salamanca\"\n"
+    "file_nodes=\"{}/{}_nodes.csv\".format(PATH,SCENARIO)\n",
+    "file_edges=\"{}/{}_edges.csv\".format(PATH,SCENARIO)\n",
+    "file_net=\"{}/{}_network.csv\".format(PATH,SCENARIO)\n",
+    "file_flows=\"{}/{}_od.csv\".format(PATH,SCENARIO)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH=\"data/OD_MADRID_v1\"\n",
+    "SCENARIO=\"Madrid_Retiro\"\n",
+    "SCENARIO=\"Madrid_Tablas\"\n",
+    "SCENARIO=\"Madrid_Salamanca\"\n",
+    "\n",
+    "file_nodes=\"{}/{}_nodes.csv\".format(PATH,SCENARIO)\n",
+    "file_edges=\"{}/{}_edges.csv\".format(PATH,SCENARIO)\n",
+    "file_net=\"{}/{}_network.csv\".format(PATH,SCENARIO)\n",
+    "file_flows=\"{}/{}_od.csv\".format(PATH,SCENARIO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH=\"data/OD_MADRID_v2\"\n",
+    "SCENARIO=\"madrid_retiro_od\"\n",
+    "SCENARIO=\"madrid_barrio_salamanca_od\"\n",
+    "SCENARIO=\"madrid_las_tablas_od\"\n",
+    "\n",
+    "file_nodes=\"{}/{}_nodes.csv\".format(PATH,SCENARIO)\n",
+    "file_edges=\"{}/{}_edgeids.csv\".format(PATH,SCENARIO)\n",
+    "file_net=\"{}/{}_weights.csv\".format(PATH,SCENARIO)\n",
+    "file_flows=\"{}/{}_flows.csv\".format(PATH,SCENARIO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "file_nodes=\"{}/{}_nodes.csv\".format(PATH,SCENARIO)\n",
-    "file_edges=\"{}/{}_edges.csv\".format(PATH,SCENARIO)\n",
-    "file_net=\"{}/{}_network.csv\".format(PATH,SCENARIO)\n",
-    "file_flows=\"{}/{}_od.csv\".format(PATH,SCENARIO)\n",
     "\n",
-    "outfile = \"{}.net\".format(SCENARIO)"
+    "outfile = \"out_maslab/{}.net\".format(SCENARIO)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def isNaN(num):\n",
@@ -121,10 +147,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def translate_2_maslab( scenario, outfile, file_nodes, file_edges, file_net, file_flows ):\n",
@@ -189,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2260,21 +2284,21 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
