--- a/TRAFFIC_ASSIGNMENT/notebooks/PRAMESHK_translate.ipynb
+++ b/TRAFFIC_ASSIGNMENT/notebooks/PRAMESHK_translate.ipynb
@@ -4,17 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MSA Scenario translator\n",
+    "# MSA Scenario translator (Prameshk)\n",
     "Network translator from MATLAB experiment formats to PRAMESHK python UE software. \n",
     "Available at https://github.com/prameshk/Traffic-Assignment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 47,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -27,12 +25,13 @@
     "import os\n",
     "\n",
     "from IPython.display import display, HTML\n",
-    "low_memory=False"
+    "low_memory=False\n",
+    "flag_dump_nodes_by_index = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +55,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,34 +78,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 49,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "PATH=\"data\"\n",
-    "\n",
+    "PATH=\"data/OD_GRID64\"\n",
     "SCENARIO=\"GRID64_6F\"\n",
-    "SCENARIO=\"Madrid_Tablas\"\n",
-    "SCENARIO=\"Madrid_Salamanca\"\n",
-    "SCENARIO=\"Madrid_Retiro\""
+    "\n",
+    "file_nodes=\"{}/{}_nodes.csv\".format(PATH,SCENARIO)\n",
+    "file_edges=\"{}/{}_edges.csv\".format(PATH,SCENARIO)\n",
+    "file_weight=\"{}/{}_network.csv\".format(PATH,SCENARIO)\n",
+    "file_flows=\"{}/{}_od.csv\".format(PATH,SCENARIO)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH=\"data/OD_MADRID_v1\"\n",
+    "SCENARIO=\"Madrid_Retiro\"\n",
+    "SCENARIO=\"Madrid_Tablas\"\n",
+    "SCENARIO=\"Madrid_Salamanca\"\n",
+    "\n",
+    "file_nodes=\"{}/{}_nodes.csv\".format(PATH,SCENARIO)\n",
+    "file_edges=\"{}/{}_edges.csv\".format(PATH,SCENARIO)\n",
+    "file_weight=\"{}/{}_network.csv\".format(PATH,SCENARIO)\n",
+    "file_flows=\"{}/{}_od.csv\".format(PATH,SCENARIO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH=\"data/OD_MADRID_v2\"\n",
+    "SCENARIO=\"madrid_barrio_salamanca_od\"\n",
+    "SCENARIO=\"madrid_las_tablas_od\"\n",
+    "SCENARIO=\"madrid_retiro_od\"\n",
+    "\n",
+    "file_nodes=\"{}/{}_nodes.csv\".format(PATH,SCENARIO)\n",
+    "file_edges=\"{}/{}_edgeids.csv\".format(PATH,SCENARIO)\n",
+    "file_weight=\"{}/{}_weights.csv\".format(PATH,SCENARIO)\n",
+    "file_speeds=\"{}/{}_speeds.csv\".format(PATH,SCENARIO)\n",
+    "file_lengths=\"{}/{}_lengths.csv\".format(PATH,SCENARIO)\n",
+    "file_flows=\"{}/{}_flows.csv\".format(PATH,SCENARIO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "file_nodes=\"{}/{}_nodes.csv\".format(PATH,SCENARIO)\n",
-    "file_edges=\"{}/{}_edges.csv\".format(PATH,SCENARIO)\n",
-    "file_net=\"{}/{}_network.csv\".format(PATH,SCENARIO)\n",
-    "file_flows=\"{}/{}_od.csv\".format(PATH,SCENARIO)\n",
-    "\n",
     "DEST_DIR=\"prameshk/\"+SCENARIO\n",
     "if not os.path.exists(DEST_DIR):\n",
     "    os.makedirs(DEST_DIR)"
@@ -114,10 +142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 53,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def isNaN(num):\n",
@@ -126,13 +152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 54,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def translate_2_prameshk( dest_dir, file_nodes, file_edges, file_net, file_flows ):\n",
+    "def translate_2_prameshk( dest_dir, file_nodes, file_edges, file_weight, file_speeds, file_lengths, file_flows ):\n",
     "\n",
     "    low_memory=False\n",
     "    \n",
@@ -150,10 +174,20 @@
     "    dfe = pd.read_csv(file_edges, encoding='utf-8', sep=sep )\n",
     "    dfe.columns.values[0] = \"node_name\"\n",
     "    \n",
+    "    # Load speeds\n",
+    "    print(\"Reading speeds file: \"+file_edges)\n",
+    "    dfs = pd.read_csv(file_speeds, encoding='utf-8', sep=sep )\n",
+    "    dfs.columns.values[0] = \"node_name\"\n",
+    "    \n",
+    "    # Load lengths\n",
+    "    print(\"Reading lengths file: \"+file_edges)\n",
+    "    dfl = pd.read_csv(file_lengths, encoding='utf-8', sep=sep )\n",
+    "    dfl.columns.values[0] = \"node_name\"\n",
+    "    \n",
     "    # Load nodes\n",
-    "    print(\"Reading network file: \"+file_net)\n",
-    "    dfn = pd.read_csv(file_net, encoding='utf-8', sep=sep)\n",
-    "    dfn.columns.values[0] = \"node_name\"\n",
+    "    print(\"Reading weigths file: \"+file_weight)\n",
+    "    dfw = pd.read_csv(file_weight, encoding='utf-8', sep=sep)\n",
+    "    dfw.columns.values[0] = \"node_name\"\n",
     "    nr=len(dfe.columns)\n",
     "    hnodes={}\n",
     "    inodes={}\n",
@@ -179,7 +213,10 @@
     "            cell = rowData[y]\n",
     "            if(not isNaN(cell) and cell>0):\n",
     "                #print(\"edge {} {} {}\".format(cell,x,y))\n",
-    "                fhd.write(\"{}{}{}{}{} \\n\".format(inodes[x],outsep,inodes[y-1],outsep,cell))\n",
+    "                if flag_dump_nodes_by_index:\n",
+    "                    fhd.write(\"{}{}{}{}{} \\n\".format(x,outsep,y,outsep,cell))\n",
+    "                else:\n",
+    "                    fhd.write(\"{}{}{}{}{} \\n\".format(inodes[x],outsep,inodes[y-1],outsep,cell))\n",
     "    fhd.close()\n",
     "\n",
     "    #---------------------------------------------------\n",
@@ -187,10 +224,10 @@
     "    #---------------------------------------------------\n",
     "    print(\"Generating network file: \"+outfile_network)\n",
     "    fhn = open(outfile_network, 'w')\n",
-    "    fhn.write(\"tail.node{}head.node{}capacity..veh.h.{}length..miles.{}fftt.min.{}Power\tB{}speed.limit..mph.\".format(outsep,outsep,outsep,outsep,outsep,outsep))\n",
+    "    fhn.write(\"tail.node{}head.node{}capacity..veh.h.{}length..miles.{}fftt.min.{}Power\tB{}speed.limit..mph.\\n\".format(outsep,outsep,outsep,outsep,outsep,outsep))\n",
     "    #fh.write(\"#edge name origin destination function constants \\n\")\n",
-    "    vdf_power = 0.9\n",
-    "    vdf_beta  = 99\n",
+    "    vdf_power = 0.15\n",
+    "    vdf_beta  = 4\n",
     "    for x, rowData in dfe.iterrows():\n",
     "        nc = len(rowData)\n",
     "        for y in range(1,nc):\n",
@@ -200,81 +237,49 @@
     "                edge_head_name = inodes[edge_head_idx]\n",
     "                edge_tail_idx  = y-1\n",
     "                edge_tail_name = inodes[edge_tail_idx]\n",
-    "                edge_capacity  = 99999\n",
-    "                edge_max_speed = \n",
-    "                edge_length    = \n",
-    "                edge_fftt_min  = dfn.iloc[x,y]\n",
+    "                edge_capacity  = 9999\n",
+    "                edge_max_speed = dfs.iloc[x,y]\n",
+    "                edge_length    = dfl.iloc[x,y]\n",
+    "                edge_fftt_min  = dfw.iloc[x,y]\n",
     "                \n",
     "                #print(\"edge {} {} {}\".format(cell,x,y))\n",
     "                #fhn.write(\"{} {} {} {} {} \\n\".format(ename,inodes[x],inodes[y-1],fun,dfn.iloc[x,y]))\n",
-    "                fhn.write(\"{}{}{}{}\".format(edge_head_name,outsep,edge_tail_name,outsep,\n",
-    "                                           edge_capacity, outsep, edge_length, outsep,\n",
-    "                                           edge_fftt_min, outsep, vdf_power, outsep,\n",
-    "                                           vdf_beta, outsep, edge_max_speed ))\n",
-    "    fhn.close()\n",
-    "    \n",
-    "    return\n",
-    "    \n",
-    "    fhd = open(outfile, 'w')\n",
-    "    fh.write(\"#################################\\n\")\n",
-    "    fh.write(\"# Autogenerated file for scenario: {}\\n\".format(scenario))\n",
-    "    fh.write(\"#################################\\n\")\n",
-    "    fh.write(\"#function name (args) formula\\n\")\n",
-    "    fh.write(\"function OW (f) t+0.02*f \\n\")\n",
-    "    fh.write(\"#################################\\n\")\n",
-    "    fh.write(\"#node name \\n\")\n",
-    "    df = pd.read_csv(file_nodes, encoding='utf-8', sep=sep)\n",
-    "    for index, row in df.iterrows():\n",
-    "        v=row[0];\n",
-    "        if(type(v)==numpy.float64):\n",
-    "            fh.write(\"node N{} \\n\".format(int(row[0])))\n",
-    "        else:\n",
-    "            fh.write(\"node N{} \\n\".format(row[0]))\n",
-    "        \n",
-    "    fun=\"OW\"\n",
-    "\n",
-    "    fh.write(\"#################################\\n\")\n",
-    "    fh.write(\"#edge name origin destination function constants \\n\")\n",
-    "    for x, rowData in dfe.iterrows():\n",
-    "        nc = len(rowData)\n",
-    "        for y in range(1,nc):\n",
-    "            if(not isNaN(rowData[y])):\n",
-    "                ename = 'E{}'.format(rowData[y]).replace('#','_')\n",
-    "                #print(\"edge {} {} {}\".format(cell,x,y))\n",
-    "                fh.write(\"edge {} {} {} {} {} \\n\".format(ename,inodes[x],inodes[y-1],fun,dfn.iloc[x,y]))\n",
-    "\n",
-    "    fh.write(\"#################################\\n\")\n",
-    "    fh.write(\"#od name origin destination flow\\n\")\n",
-    "    for x, rowData in dff.iterrows():\n",
-    "        nc = len(rowData)\n",
-    "        for y in range(1,nc):\n",
-    "            cell = rowData[y]\n",
-    "            if(not isNaN(cell) and cell>0):\n",
-    "                #print(\"edge {} {} {}\".format(cell,x,y))\n",
-    "                fh.write(\"od {}|{} {} {} {} \\n\".format(inodes[x],inodes[y-1],inodes[x],inodes[y-1],cell))\n",
-    "\n",
-    "\n",
-    "    fh.close()"
+    "                if flag_dump_nodes_by_index:\n",
+    "                    fhn.write(\"{}{}{}{}{}{}{}{}{}{}{}{}{}{}{}\\n\".format(\n",
+    "                                    edge_head_idx,outsep,edge_tail_idx,outsep,\n",
+    "                                   edge_capacity, outsep, edge_length, outsep,\n",
+    "                                   edge_fftt_min, outsep, vdf_power, outsep,\n",
+    "                                   vdf_beta, outsep, edge_max_speed ))\n",
+    "                else:\n",
+    "                    fhn.write(\"{}{}{}{}{}{}{}{}{}{}{}{}{}{}{}\\n\".format(\n",
+    "                                    edge_head_name,outsep,edge_tail_name,outsep,\n",
+    "                                   edge_capacity, outsep, edge_length, outsep,\n",
+    "                                   edge_fftt_min, outsep, vdf_power, outsep,\n",
+    "                                   vdf_beta, outsep, edge_max_speed ))\n",
+    "    fhn.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading edges file: data/Madrid_Retiro_edges.csv\n",
-      "Reading network file: data/Madrid_Retiro_network.csv\n",
-      "Reading od-flows file: data/Madrid_Retiro_od.csv\n",
-      "Generating demand file: prameshk/Madrid_Retiro/demand.dat\n"
+      "Reading edges file: data/OD_MADRID_v2/madrid_retiro_od_edgeids.csv\n",
+      "Reading speeds file: data/OD_MADRID_v2/madrid_retiro_od_edgeids.csv\n",
+      "Reading lengths file: data/OD_MADRID_v2/madrid_retiro_od_edgeids.csv\n",
+      "Reading weigths file: data/OD_MADRID_v2/madrid_retiro_od_weights.csv\n",
+      "Reading od-flows file: data/OD_MADRID_v2/madrid_retiro_od_flows.csv\n",
+      "Generating demand file: prameshk/madrid_retiro_od/demand.dat\n",
+      "Generating network file: prameshk/madrid_retiro_od/network.dat\n"
      ]
     }
    ],
    "source": [
-    "translate_2_prameshk( DEST_DIR, file_nodes, file_edges, file_net, file_flows)"
+    "translate_2_prameshk( DEST_DIR, file_nodes, file_edges, file_weight, file_speeds, file_lengths, file_flows)"
    ]
   },
   {
@@ -883,7 +888,7 @@
    "source": [
     "dfe = pd.read_csv(file_edges, encoding='utf-8', sep=\";\" )\n",
     "dfe.columns.values[0] = \"node_name\"\n",
-    "dfn = pd.read_csv(file_net, encoding='utf-8', sep=\";\" )\n",
+    "dfn = pd.read_csv(file_weight, encoding='utf-8', sep=\";\" )\n",
     "dfn.columns.values[0] = \"node_name\"\n",
     "#dfn.columns"
    ]
@@ -2099,21 +2104,21 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
